# Catering-app-C-

./: CMakeLists.txt  README.md  main.cpp
Entitites/: Client.cpp  Client.h  Courier.cpp  Courier.h  Entity.h  EntityType.h  IdGenerator.cpp  IdGenerator.h  Order.cpp  Order.h  PremiumOrder.cpp  PremiumOrder.h  Restaurant.cpp  Restaurant.h
Exceptions/: ExistingIdException.h  NonExistingIdException.h  ValidationException.h
Repo/: RepoTemp.h
Service/: ClientService.cpp  ClientService.h  CourierService.cpp  CourierService.h  MasterService.h  OrderService.cpp  OrderService.h  RestaurantService.cpp  RestaurantService.h
Tests/: TestEntities.h  TestRepo.h  runTests.h  testGenerateId.cpp  testGenerateId.h  testService.h
UI/: UI.cpp  UI.h
Validator/: ClientValidator.h  NameValidator.h
